It will fix some of the spacing issues with the boxes on the right column

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ img {
   border: solid green;
   border-width: 1px;
   background-color:lightgreen;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
   box-sizing: border-box;
   text-align: center;
 }
